--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node --watch ./src/server.js"
+    "dev": "node --watch ./src/server.js",
+    "start": "node ./src/server.js",
+    "postinstall": "prisma generate"
   },
   "keywords": [],
   "author": "",
