--- a/package.json
+++ b/package.json
@@ -4,10 +4,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "node --watch ./src/server.js",
-    "start": "node ./src/server.js",
-    "postinstall": "prisma generate"
+    "start": "node ./src/server.js"
   },
   "keywords": [],
   "author": "",
